--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "@types/node": "^20.14.2",
     "nodemon": "^3.1.3",
     "prisma": "^5.15.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
     "@prisma/client": "^5.15.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-validator": "^7.1.0"
+    "express-validator": "^7.1.0",
+    "typescript": "^5.4.5"
   }
 }
