--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.2",
+    "@types/passport": "^1.0.16",
     "nodemon": "^3.1.3",
     "prisma": "^5.15.0",
     "ts-node": "^10.9.2"
@@ -30,6 +31,8 @@
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "typescript": "^5.4.5"
   }
 }
