--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.2",
     "@types/passport": "^1.0.16",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.3",
     "prisma": "^5.15.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "uuid": "^10.0.0"
   },
   "dependencies": {
     "@prisma/client": "^5.15.0",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -33,6 +36,7 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.7.5",
     "typescript": "^5.4.5"
   }
 }
