--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^20.14.11",
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth20": "^2.0.16",
+    "@types/streamifier": "^0.1.2",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.3",
     "prisma": "^5.17.0",
@@ -43,7 +44,9 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "random-int": "^3.0.0",
+    "sharp": "^0.33.4",
     "socket.io": "^4.7.5",
+    "streamifier": "^0.1.1",
     "typescript": "^5.4.5"
   }
 }
