--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@prisma/client": "^5.17.0",
     "@types/express-session": "^1.18.0",
+    "@vercel/node": "^3.2.23",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
@@ -50,6 +51,6 @@
     "sharp": "^0.33.4",
     "socket.io": "^4.7.5",
     "streamifier": "^0.1.1",
-    "typescript": "^5.4.5"
+    "typescript": "^5.6.3"
   }
 }
