--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,16 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "index.js",
-            "use": "@vercel/node"
-        }
+      {
+        "src": "src/index.ts",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "index.js"
-        }
+      {
+        "src": "/(.*)",
+        "dest": "src/index.ts"
+      }
     ]
-}
+  }
+  
