--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "discord-clone-back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts", 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --watch src --exec ts-node src/index.ts"
+    "dev": "nodemon --watch src --exec ts-node src/index.ts",
+    "build": "prisma generate", 
+    "start": "ts-node src/index.ts" 
   },
   "keywords": [],
   "author": "",
